Overflow hidden in welcome section to fix responsiveness

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,7 @@
 
 html,
 body {
+    width: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
@@ -30,6 +31,10 @@ h2 {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+.hide-overflow {
+    overflow-x: hidden;
 }
 
 /*------------------------------------Colors*/
